{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 214,
  "lineage": "d4b4ad23-ee95-7722-c0f7-1487bd8c93ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03d84abcde942cf8c",
            "arn": "arn:aws:ec2:us-east-1:470037505301:instance/i-046c08b2a8109a17c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046c08b2a8109a17c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-20260619194152740400000001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-098274ecd26c8829a"
              }
            ],
            "primary_network_interface_id": "eni-098274ecd26c8829a",
            "private_dns": "ip-10-0-1-241.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.241",
            "public_dns": "ec2-18-232-133-3.compute-1.amazonaws.com",
            "public_ip": "18.232.133.3",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b895d25337a6dc9c",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bbaf27a9794b5534",
            "tags": {
              "Name": "ap-sg-server-v2"
            },
            "tags_all": {
              "Name": "ap-sg-server-v2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff075734439534ba"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "470037505301",
            "id": "i-046c08b2a8109a17c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.web_key",
            "aws_security_group.web_sg",
            "aws_subnet.web_subnet",
            "aws_vpc.vpc_cidr",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470037505301:internet-gateway/igw-044c667c8f7e4207a",
            "id": "igw-044c667c8f7e4207a",
            "owner_id": "470037505301",
            "region": "us-east-1",
            "tags": {
              "Name": "web-igw"
            },
            "tags_all": {
              "Name": "web-igw"
            },
            "vpc_id": "vpc-04aee417d487cb8cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470037505301:route-table/rtb-090b9759556d4ec12",
            "id": "rtb-090b9759556d4ec12",
            "owner_id": "470037505301",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-044c667c8f7e4207a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web-route-table"
            },
            "tags_all": {
              "Name": "web-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04aee417d487cb8cd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "470037505301",
            "id": "rtb-090b9759556d4ec12",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.web_igw",
            "aws_vpc.vpc_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09efe148695a17ef3",
            "region": "us-east-1",
            "route_table_id": "rtb-090b9759556d4ec12",
            "subnet_id": "subnet-0bbaf27a9794b5534"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.web_igw",
            "aws_route_table.web_rt",
            "aws_subnet.web_subnet",
            "aws_vpc.vpc_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470037505301:security-group/sg-0ff075734439534ba",
            "description": "Security group for ap-sg-server-v2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff075734439534ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ap-sg-server-v2-security-group",
            "name_prefix": "",
            "owner_id": "470037505301",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ap-sg-server-v2-security-group"
            },
            "tags_all": {
              "Name": "ap-sg-server-v2-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-04aee417d487cb8cd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "470037505301",
            "id": "sg-0ff075734439534ba",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470037505301:subnet/subnet-0bbaf27a9794b5534",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbaf27a9794b5534",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "470037505301",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "web-subnet"
            },
            "tags_all": {
              "Name": "web-subnet"
            },
            "vpc_id": "vpc-04aee417d487cb8cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "470037505301",
            "id": "subnet-0bbaf27a9794b5534",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_cidr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470037505301:vpc/vpc-04aee417d487cb8cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c38c25d60e145631",
            "default_route_table_id": "rtb-061328bdfe8b1767b",
            "default_security_group_id": "sg-017bc3d40ff8d1fe8",
            "dhcp_options_id": "dopt-08498c856e54888ec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04aee417d487cb8cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-061328bdfe8b1767b",
            "owner_id": "470037505301",
            "region": "us-east-1",
            "tags": {
              "Name": "web-vpc"
            },
            "tags_all": {
              "Name": "web-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "470037505301",
            "id": "vpc-04aee417d487cb8cd",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}